name:                Scheme
version:             0.1.0.0
synopsis:            A Scheme interpreter written in Haskell.            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stallmanifold
maintainer:          stallmanifold@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable             scheme
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:
  ghc-options:         -Wno-unused-do-bind -Wno-name-shadowing
  build-depends:       base >=4.9 && <4.10, 
                       mtl >=2.2 && <2.3, 
                       array >=0.5 && <0.6,
                       parsec >=3.1.11
  hs-source-dirs:      src
  default-language:    Haskell2010
