name:                scheme
version:             0.1.0.0
synopsis:            A Scheme interpreter written in Haskell.            
-- description:         
license:             Apache-2.0
license-file:        LICENSE-APACHE
author:              LambdaXymox
maintainer:          lambda.xymox@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable             scheme
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:
  ghc-options:         -Wno-unused-do-bind -Wno-name-shadowing
  build-depends:       base >=4.9 && <4.10, 
                       mtl >=2.2 && <2.3, 
                       array >=0.5 && <0.6,
                       parsec >=3.1.11
  hs-source-dirs:      src
  default-language:    Haskell2010


library
  hs-source-dirs:      src
  ghc-options:         -Wno-unused-do-bind -Wno-name-shadowing
  build-depends:       base >=4.9 && <4.10,
                       mtl >=2.2 && <2.3,
                       array >=0.5 && <0.6,
                       parsec >=3.1.11
  exposed-modules:     Scheme.Types,
                       Scheme.Parser,
                       Scheme.Eval,
                       Scheme.Env
  default-language:    Haskell2010


test-suite             spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       mtl >=2.2 && <2.3,
                       hspec >=2.4.3,
                       array >=0.5 && <0.6,
                       parsec >=3.1.11,
                       QuickCheck >=2.9,
                       scheme -any
  other-modules:       Scheme.ParserSpec
  default-language:    Haskell2010
